--- a/package.json
+++ b/package.json
@@ -3,12 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tailwindcss/forms": "^0.4.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
+    "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-gsap": "^3.2.1",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-scrollmagic": "^2.3.0",
+    "react-typewriter-effect": "^1.1.0",
+    "styled-components": "^5.3.3",
+    "twin.macro": "^2.8.2",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -34,5 +42,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@emotion/styled": "^11.6.0",
+    "autoprefixer": "^10.4.0",
+    "gh-pages": "^3.2.3",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.12"
+  },
+  "babelMacros": {
+    "twin": {
+      "preset": "styled-components"
+    }
   }
 }
